--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>youtube clone</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.min.css">
-    <link rel="stylesheet" href="youtube.css"/>
+    <link rel="stylesheet" href="index.css"/>
 
 </head>
 <body>
